# NekoSCrypt

./: .gitignore  Makefile.am  README.md  configure.ac
ci/test/: 04_install.sh  06_script_a.sh  06_script_b.sh
contrib/devtools/: gen-manpages.sh
contrib/macdeploy/: custom_dsstore.py  detached-sig-create.sh  macdeployqtplus
contrib/seeds/: makeseeds.py  nodes_main.txt  nodes_test.txt
doc/: REST-interface.md  psbt.md
doc/man/: Makefile.am  nekoscrypt-cli.1  nekoscrypt-qt.1  nekoscrypt-tx.1  nekoscrypt-wallet.1  nekoscryptd.1
doc/release-notes/: release-notes-0.11.0.md  release-notes-0.12.0.md  release-notes-0.13.0.md  release-notes-0.15.0.md  release-notes-0.16.0.md  release-notes-0.17.0.md  release-notes-0.19.0.1.md  release-notes-0.3.22.md  release-notes-0.3.23.md  release-notes-0.4.3.md  release-notes-0.5.2.md  release-notes-0.8.2.md  release-notes-0.9.0.md  release-notes-0.9.2.1.md  release-notes-0.9.2.md
share/: setup.nsi.in
share/qt/: Info.plist.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  amount.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chainparams.cpp  chainparamsbase.cpp  chainparamsseeds.h  checkpointsync.cpp  checkpointsync.h  clientversion.cpp  init.cpp  key.cpp  net_processing.cpp  protocol.h  validation.cpp
src/bench/: .gitignore  checkblock.cpp
src/compat/: assumptions.h
src/policy/: feerate.cpp  fees.cpp
src/qt/: README.md  addressbookpage.cpp  bitcoin.cpp  (+20 more)
(+129 files in other folders)
